switched to css grid for layout and ensure consisten spacing

--- a/static/style.css
+++ b/static/style.css
@@ -56,12 +56,23 @@ body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   display: grid;
+  grid-template-columns: auto minmax(0,45rem) auto;
   grid-template-rows: auto 1fr auto;
   min-height: 100vh;
   min-height: 100dvh;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.6;
+}
+main,header,footer {
+  padding: var(--spacing-base);
+}
+header, footer {
+  grid-column: 1/4;
+}
+main
+{
+  grid-column: 2;
 }
 [lang="ml"] {
   font-family: "RIT-Kutty-Bold", "Noto Sans Malayalam", system-ui;
@@ -83,8 +94,6 @@ body > header {
   color: var(--text-color);
   display: flex;
   justify-content: space-between;
-  padding: var(--spacing-small) var(--spacing-medium);
-  width: 100%;
 }
 header > h1 {
   margin: unset;
@@ -130,10 +139,6 @@ p,li,figcaption {
   text-wrap: pretty;
   max-width: 63ch;
 }
-main {
-  margin: 0 auto;
-  padding: var(--spacing-base);
-}
 section {
   margin-top: var(--spacing-xl);
 }
@@ -142,6 +147,9 @@ nav ul {
   margin: unset;
   display: flex;
   list-style-type: none;
+}
+nav li {
+  margin: unset;
 }
 nav a {
   text-decoration: none;
@@ -215,7 +223,6 @@ article header {
 footer {
   background-color: var(--secondary-bg-color);
   border-top: 5px solid var(--accent-color);
-  padding: 1rem;
   font-size: var(--text-size-90);
 }
 
@@ -226,6 +233,12 @@ nav ul li:first-child {
   list-style-type: none;
 }
 @media (max-width: 768px) {
+  body {
+    grid-template-columns: 1fr;
+  }
+  main {
+    grid-column: 1;
+  }
   nav ul li {
     display: none;
   }
